# django-highlightjs

./: .coveralls.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.md  AUTHORS.rst  LICENSE  MANIFEST.in  README.md  README.rst  manage.py  pyproject.toml  requirements_test.txt  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: workflow.yml
highlightjs/: __init__.py  renderer.py  settings.py  tests.py  testsettings.py
highlightjs/templatetags/: highlightjs.py
