[tool.poetry]
name = "django-highlightjs"
version = "0.2.13"
description = "A Django app to easyily integrate highlight.js syntax highlighter."
authors = ["Mounir Messelmeni <messelmeni.mounir@gmail.com>"]
license = "mit"
readme = "README.md"
packages = [{ include = "highlightjs" }]
exclude = ["highlightjs/tests.py", "highlightjs/testsettings.py"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
homepage = "https://github.com/mounirmesselmeni/django-highlightjs/"
repository = "https://github.com/mounirmesselmeni/django-highlightjs/"
keywords = [
  "django",
  "highlightjs",
  "syntax",
  "highlighter",
  "syntax highlighter",
  "highlight.js",
]

[tool.poetry.dependencies]
python = ">= 3.10 < 3.13"
Django = ">= 4.2"

[tool.poetry.group.dev.dependencies]
coverage = "~7"
coveralls = "~4"
pre-commit = "3.*"
ruff = "0.6.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".git",
  ".mypy_cache",
  ".pre-commit-cache",
  ".ruff_cache",
  ".tox",
  ".venv",
  "venv",
  "docs",
  "__pycache",
  "**/migrations/*",
]
line-length = 120
# Assume Python 3.11.
target-version = "py311"

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
# Docs: https://beta.ruff.rs/docs/
# Rules: https://beta.ruff.rs/docs/rules/
select = [
  "F",
  "E",
  "B",
  "C4",
  "EXE",
  "ISC",
  "ICN",
  "INP",
  "PIE",
  "SIM",
  "W",
  "T20",
  "UP",
  "T10",
  "G",
  "DJ001",
  "DJ008",
  "C90",
  "ERA",
]
# Later on might be useful C/C90 (Compexity), ERA (Found commented-out code), FBT
ignore = ["B008", "SIM102", "ISC001"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
