[project]
name = "django-highlightjs"
version = "0.2.14"
description = "A Django app to easyily integrate highlight.js syntax highlighter."
authors = [
    { name = "Mounir Messelmeni", email = "messelmeni.mounir@gmail.com" },
]
requires-python = ">=3.10"
readme = "README.md"
license = "mit"
keywords = [
    "django",
    "highlightjs",
    "syntax",
    "highlighter",
    "syntax highlighter",
    "highlight.js",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["Django>= 4.2"]

[project.urls]
Homepage = "https://github.com/mounirmesselmeni/django-highlightjs/"
Repository = "https://github.com/mounirmesselmeni/django-highlightjs/"

[dependency-groups]
dev = ["coverage>=7,<8", "pre-commit>=3,<5", "ruff>=0.6,<0.13"]

[tool.hatch.build.targets.sdist]
include = ["highlightjs"]
exclude = ["highlightjs/tests.py", "highlightjs/testsettings.py"]

[tool.hatch.build.targets.wheel]
include = ["highlightjs"]
exclude = ["highlightjs/tests.py", "highlightjs/testsettings.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".mypy_cache",
    ".pre-commit-cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "venv",
    "docs",
    "__pycache",
    "**/migrations/*",
]
line-length = 120
# Assume Python 3.11.
target-version = "py311"

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
# Docs: https://beta.ruff.rs/docs/
# Rules: https://beta.ruff.rs/docs/rules/
select = [
    "F",
    "E",
    "B",
    "C4",
    "EXE",
    "ISC",
    "ICN",
    "INP",
    "PIE",
    "SIM",
    "W",
    "T20",
    "UP",
    "T10",
    "G",
    "DJ001",
    "DJ008",
    "C90",
    "ERA",
]
# Later on might be useful C/C90 (Compexity), ERA (Found commented-out code), FBT
ignore = ["B008", "SIM102", "ISC001"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
